docker
mysql, phpmyadmin, maven, java

Pas de javafx dû à un problème de module.